# ceres-solver_mkl_qr

./: .gitignore  CMakeLists.txt
ceres_algo-python/: data_creation.py  main_no_loops2.py
cmake/: CeresConfig.cmake.in  FindCXSparse.cmake  FindSuiteSparse.cmake
docs/source/: installation.rst
examples/: CMakeLists.txt
examples/gpu_jet/: GpuJetHolder.cpp  GpuJetHolder.cu  GpuJetHolder.h  jet_investigation.cc
examples/opencl/: CMakeLists.txt
examples/opencl/include/opencl_jet/: graph.h  graph_node.h
examples/opencl/src/: graph.cpp  main.cpp
include/ceres/: jet.h
internal/ceres/: CMakeLists.txt
